k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pharmacy-api-service

spec:
  selector:
    app: pharmacy-api

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
