k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pharmacy-api-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: pharmacy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pharmacy-api-service
                port:
                  number: 8000
